Changed the title of Calculator

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="head">
-            <h3>CAN Calculator</h3>
+            <h3>Calculate Me</h3>
         </div>
         <div class="row">
             <input type="text" class="input">
